// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentCancelDialog 30% 1`] = `
<div
  class="indicator-bar indicator-bar_load_normal"
>
  <div
    class="indicator-bar__value"
    style="width: 30.00%;"
  />
</div>
`;

exports[`PaymentCancelDialog 85% 1`] = `
<div
  class="indicator-bar indicator-bar_load_medium"
>
  <div
    class="indicator-bar__value"
    style="width: 85.00%;"
  />
</div>
`;

exports[`PaymentCancelDialog 99% 1`] = `
<div
  class="indicator-bar indicator-bar_load_full"
>
  <div
    class="indicator-bar__value"
    style="width: 99.00%;"
  />
</div>
`;
